--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,6 @@
     </properties>
     <repositories>
 	   <repository>
-		  <id>java.net.m2</id>
-		  <url>http://download.java.net/maven/2</url>
-	   </repository>
-	   <repository>
 		  <id>prime-repo</id>
 		  <url>http://repository.primefaces.org</url>
 		  <name>PrimeFaces Maven Repository</name>
@@ -23,10 +19,9 @@
     </repositories>
     <dependencies>
 	   <dependency>
-		  <groupId>log4j</groupId>
-		  <artifactId>log4j</artifactId>
-		  <version>1.2.17</version>
-		  <type>jar</type>
+		  <groupId>postgresql</groupId>
+		  <artifactId>postgresql</artifactId>
+		  <version>9.1-901-1.jdbc4</version>
 	   </dependency>
 	   <dependency>
 		  <groupId>org.primefaces</groupId>
@@ -63,7 +58,7 @@
 		  <plugin>
 			 <groupId>org.apache.maven.plugins</groupId>
 			 <artifactId>maven-war-plugin</artifactId>
-    			 <version>2.3</version>
+			 <version>2.3</version>
 			 <configuration>
 				<WebXml>src/main/webapp/WEB-INF/web.xml</WebXml>
 			 </configuration>
