--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,14 @@
 	   <param-name>primefaces.THEME</param-name>
 	   <param-value>redmond</param-value>
     </context-param>
+    <filter>
+	   <filter-name>PrimeFaces FileUpload Filter</filter-name>
+	   <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+    </filter>
+    <filter-mapping>
+	   <filter-name>PrimeFaces FileUpload Filter</filter-name>
+	   <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
     <servlet>
 	   <servlet-name>Faces Servlet</servlet-name>
 	   <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
