--- a/pom.xml
+++ b/pom.xml
@@ -1,103 +1,97 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.hpclab</groupId>
-    <artifactId>Bichos</artifactId>
+    <artifactId>cev</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>Bichos</name>
-    <properties>
-	   <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
-	   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <repositories>
-	   <repository>
-		  <id>prime-repo</id>
-		  <url>http://repository.primefaces.org</url>
-		  <name>PrimeFaces Maven Repository</name>
-	   </repository>
-    </repositories>
+    <name>CEV</name>
     <dependencies>
-	   <dependency>
-		  <groupId>postgresql</groupId>
-		  <artifactId>postgresql</artifactId>
-		  <version>9.1-901-1.jdbc4</version>
-	   </dependency>
-	   <dependency>
-		  <groupId>org.primefaces</groupId>
-		  <artifactId>primefaces</artifactId>
-		  <version>5.3</version>
-		  <type>jar</type>
-	   </dependency>
-	   <dependency>
-		  <groupId>org.primefaces.themes</groupId>  
-		  <artifactId>redmond</artifactId>  
-		  <version>1.0.10</version>  
-	   </dependency>
-	   <dependency>
-		  <groupId>javax</groupId>
-		  <artifactId>javaee-web-api</artifactId>
-		  <version>6.0</version>
-		  <scope>provided</scope>
-	   </dependency>
-	   <dependency>
-		  <groupId>commons-io</groupId>
-		  <artifactId>commons-io</artifactId>
-		  <version>2.4</version>
-	   </dependency>
-	   <dependency>
-		  <groupId>commons-fileupload</groupId>
-		  <artifactId>commons-fileupload</artifactId>
-		  <version>1.3</version>
-	   </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-api</artifactId>
+            <version>2.2.14</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.faces</groupId>
+            <artifactId>jsf-impl</artifactId>
+            <version>2.2.14</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>6.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.11.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.3.11.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.0.Final</version>
+        </dependency>
     </dependencies>
     <build>
-	   <plugins>
-		  <plugin>
-			 <groupId>org.apache.maven.plugins</groupId>
-			 <artifactId>maven-compiler-plugin</artifactId>
-			 <version>2.3.2</version>
-			 <configuration>
-				<source>1.6</source>
-				<target>1.6</target>
-				<compilerArguments>
-				    <endorseddirs>${endorsed.dir}</endorseddirs>
-				</compilerArguments>
-			 </configuration>
-		  </plugin>
-		  <plugin>
-			 <groupId>org.apache.maven.plugins</groupId>
-			 <artifactId>maven-war-plugin</artifactId>
-			 <version>2.3</version>
-			 <configuration>
-				<WebXml>src/main/webapp/WEB-INF/web.xml</WebXml>
-			 </configuration>
-		  </plugin>
-		  <plugin>
-			 <groupId>org.apache.maven.plugins</groupId>
-			 <artifactId>maven-dependency-plugin</artifactId>
-			 <version>2.1</version>
-			 <executions>
-				<execution>
-				    <phase>validate</phase>
-				    <goals>
-					   <goal>copy</goal>
-				    </goals>
-				    <configuration>
-					   <outputDirectory>${endorsed.dir}</outputDirectory>
-					   <silent>true</silent>
-					   <artifactItems>
-						  <artifactItem>
-							 <groupId>javax</groupId>
-							 <artifactId>javaee-endorsed-api</artifactId>
-							 <version>6.0</version>
-							 <type>jar</type>
-						  </artifactItem>
-					   </artifactItems>
-				    </configuration>
-				</execution>
-			 </executions>
-		  </plugin>
-	   </plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.1</version>
+            </plugin>
+        </plugins>
     </build>
 </project>
