--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,15 @@
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>CEV</name>
+
+	<repositories>
+		<repository>
+			<id>primefaces-maven-repository</id>
+			<name>PrimeFaces Maven Repository</name>
+			<url>http://repository.primefaces.org</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -45,8 +54,8 @@
 			<version>6.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.primefaces.extensions</groupId>
-			<artifactId>all-themes</artifactId>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>redmond</artifactId>
 			<version>1.0.8</version>
 		</dependency>
 		<dependency>
